<resources>
    <string name="app_name">Shoppit</string>
    <string name="delete_title">Warning</string>
    <string name="delete_message">Are you sure you want to delete this list?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="nameText">Name:</string>
    <string name="priceText">Price:</string>
    <string name="descText">Description:</string>
    <string name="delText">Delete</string>
    <string name="totalCost">Total Cost($): </string>

    //String for Menu and the Dialog
    <string name="Get_Help">Help</string>
    <string name="manage_list">Lists</string>
    <string name="Author_Name">Author\'s Name</string>
    <string name="Version">Version:</string>
    <string name="Instruction">Instruction:</string>

    //String for Create Activity
    <string name="new_group">New List</string>
    <string name="group_name">Name:</string>
    <string name="Description">Description:</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>

    <string name="new_item">New Item</string>
    <string name="item_name">Name:</string>
    <string name="Cost">Cost:</string>

    //Update
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Edit">EDIT</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>


</resources>