<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateDeleteItemActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Edit"
        android:textColor="#030EDA"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/item_name"
        android:textColor="#010002" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />


    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:textColor="#010002"
        android:text="@string/Description" />

    <EditText
        android:id="@+id/editTextTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        />

    <TextView
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:textColor="#010002"
        android:text="@string/Cost" />

    <EditText
        android:id="@+id/editTextTextCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Update" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Delete" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cancel" />

</LinearLayout>