<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateItemActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/item_name"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />


    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/Description" />

    <EditText
        android:id="@+id/editTextTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        />

    <TextView
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/Cost" />

    <EditText
        android:id="@+id/editTextTextCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Submit" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cancel" />


</LinearLayout>