<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/messageFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/textView2"
        android:text="TextView"
        android:textSize="18sp" />

    <Button
        android:id="@+id/messageDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="Button"
        tools:text="@string/delText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/nameText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/priceText" />

    <TextView
        android:id="@+id/priceFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/messageFrag"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/textView3"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceFrag"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/descText" />

    <TextView
        android:id="@+id/descFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textSize="18sp" />
</RelativeLayout>